@@ -19,4 +19,4 @@ use Test::More;
 plan tests => 1;
 
 my $logger = Mylogger->get_logger("Waah");
-is($logger->{category}, "Waah", "rt #32942");
+is($logger->{category}, "Waah", "subclass category rt #32942");
